@@ -19,6 +19,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Martin Boeker
   Felix Wolfsteller
   Jörg Krause
+  Richard Brown
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
