@@ -8,6 +8,8 @@
           (thanks to Jelle van der Waa).
 - TI-47   first call successfully creates new database but returns exit status 1
           (thanks to Georg Sauthoff).
+- TI-49   new theme files aren't installed
+          (thanks to Richard Brown).
 - TI-51   in the taskwarrior hook, deleting a task doesn't stop the watch
           (thanks to Mattia Rizzolo).
 - TI-52   The 'refresh' scripts overwrites previous years data
